--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # tomcat server configuration
 
-#server.port: 8080
-server.port: 1746
+server.port: 8080
+#server.port: 1746
 
 # DataBase settings
-#spring.datasource.url=jdbc:mysql://localhost:3306/employee_assessment?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.url=jdbc:mysql://192.168.0.202:3306/employee_assessment?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_assessment?allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.url=jdbc:mysql://192.168.0.202:3306/employee_assessment?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
